About page,responsive typography

--- a/index.html
+++ b/index.html
@@ -29,43 +29,47 @@
 			<div class="collapse font-weight-bold  navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a id="nav" class="nav-link text-dark text-uppercase " href="#">DERNEK</a>
+						<a id="nav" class="nav-link text-primary text-uppercase " href="index.html">ANA SAYFA</a>
+					</li>
+
+					<li class="nav-item active">
+						<a id="nav" class="nav-link text-primary text-uppercase " href="about.html">DERNEK</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-uppercase text-dark " href="#">HABERLER</a>
+						<a class="nav-link text-uppercase text-primary " href="#">HABERLER</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-uppercase text-dark " href="#">Etkinlikler</a>
+						<a class="nav-link text-uppercase text-primary" href="#">Etkinlikler</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-uppercase text-dark " href="#">ÜYELİK</a>
+						<a class="nav-link text-uppercase text-primary " href="#">ÜYELİK</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-uppercase text-dark " href="#">İLETİŞİM</a>
+						<a class="nav-link text-uppercase text-primary" href="#">İLETİŞİM</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<div class="hero ">
-		<div class="overlay d-flex flex-column justify-content-center align-items-center">
-			<div class="h5 container font-weight-light text-center text-white">
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum
-				cupiditate iste dicta debitis velit voluptatem atque, voluptatum
-				accusamus porro corrupti.
-			</div>
-			<button type="button" class="btn-lg btn-info ">
-				DERNEK TÜZÜĞÜ
-			</button>
+		<div class="overlay d-flex flex-column justify-content-around justify-content-sm-start align-items-center ">
+			<img src="/assets/images/duimlogobüyükyuvarlak.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
+			<div class="h5   font-weight-bold text-center mb-5 pb-1 mb-sm-3 mb-md-4 mb-lg-5 mb-xl-5  text-white  ">
+				İstanbul
+				Üniversitesi Deniz Ulaştırma İşletme <br> Mühendisliği Mezunları Derneği</div>
+			<a role="button" href="about.html" class="btn-lg btn-info ">
+
+				HAKKIMIZDA
+			</a>
 		</div>
-		<div class="boxes d-sm-flex mb-sm-5 w-100 justify-content-center align-items-center">
+		<div class="boxes d-sm-flex mb-sm-5  justify-content-center align-items-center">
 			<div class="box bg-primary">
 				HABERLER
 			</div>
 			<div class="box bg-warning">ETKİNLİKLER</div>
 			<div class="box bg-danger">SOSYAL</div>
 		</div>
-		<div class="container d-flex flex-column justify-content-center align-items-center  mt-sm-5 mb-sm-5 pt-sm-5">
+		<div class="container d-flex flex-column justify-content-center align-items-center  mt-sm-2 mb-sm-2 pt-sm-2">
 			<div class="h2 font-weight-bold text-center mb-5 mt-5">
 				BAŞKANIN MESAJI
 			</div>
@@ -76,10 +80,10 @@
 				beatae laborum nulla! Animi tempore accusantium labore nostrum.
 				Corrupti, natus!
 			</div>
-			<img src="/assets/images/örnekimza 1.png"
-				class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
-				alt="imza" />
-			<div class="h3 text-centered mt-3 mb-3">KAĞAN AKTAY</div>
+			<!-- <img src="/assets/images/örnekimza 1.png" -->
+			<!-- class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" -->
+			<!-- alt="imza" /> -->
+			<div class="h3 text-centered mt-3 mb-3">HAKAN KARACA</div>
 			<div class="h5 text-centered font-weight-light">
 				YÖNETİM KURULU BAŞKANI
 			</div>
@@ -91,7 +95,7 @@
 
 
 
-				<div class="col-12 col-sm-6 h-100">
+				<div class="col-12 col-sm-6 ">
 					<div class="text-center  pb-3 news-title">
 						<h2>HABERLER</h2>
 					</div>
@@ -222,8 +226,9 @@
 								<ul class="list-unstyled">
 									<li><a href="#"></a></li>
 									<li><a href="#">Hakkımızda</a></li>
+									<li><a href="#">Yönetim Kurulu</a></li>
 									<li><a href="#">Deniz Ulaştırma</a></li>
-									<li><a href="#">Üniversite ve Bölüm</a></li>
+									<li><a href="#">Üniversite </a></li>
 									<li><a href="#">SSS</a></li>
 								</ul>
 							</div>
@@ -231,29 +236,27 @@
 						<div class="col-md-3 col-sm-6">
 							<!--Column1-->
 							<div class="footer-pad">
-								<h4>Heading 2</h4>
+								<h4>SİTE</h4>
 								<ul class="list-unstyled">
-									<li><a href="#">Website Tutorial</a></li>
-									<li><a href="#">Accessibility</a></li>
-									<li><a href="#">Disclaimer</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">FAQs</a></li>
-									<li><a href="#">Webmaster</a></li>
+									<li><a href="#">Ana Sayfa</a></li>
+									<li><a href="#">Haberler</a></li>
+									<li><a href="#">Etkinlikler</a></li>
+									<li><a href="#">İletişim</a></li>
+									<li><a href="#">Site Sözleşmesi</a></li>
 								</ul>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6">
 							<!--Column1-->
 							<div class="footer-pad">
-								<h4>Heading 3</h4>
+								<h4>Sosyal</h4>
 								<ul class="list-unstyled">
-									<li><a href="#">Parks and Recreation</a></li>
-									<li><a href="#">Public Works</a></li>
-									<li><a href="#">Police Department</a></li>
-									<li><a href="#">Fire</a></li>
-									<li><a href="#">Mayor and City Council</a></li>
-									<li>
-										<a href="#"></a>
+									<li><a href="#">Üyelik</a></li>
+									<li><a href="#">Nasıl Üye Olunur?</a></li>
+									<li><a href="#">Üyelik Şartları</a></li>
+									<li><a href="#">Kişisel Verilerin Korunması Kanunu</a></li>
+
+									<a href="#"></a>
 									</li>
 								</ul>
 							</div>
