Tüzük,logo,animasyon

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img class="img-fluid" src="./assets/images/yenilogo.png" alt="" />
+                <img class="img-fluid" src="./assets/images/derneklogoufak.png" alt="" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse font-weight-bold  navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a id="nav" class="nav-link text-primary text-uppercase " href="index.html">ANA SAYFA</a>
                     </li>
                     <li class="nav-item active">
@@ -54,7 +54,7 @@
     </nav>
     <div class="hero-about">
         <div class="overlay d-flex flex-column justify-content-around justify-content-sm-start align-items-center ">
-            <img src="/assets/images/duimlogobüyükyuvarlak.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
+            <img src="/assets/images/derneklogoorta.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
 
         </div>
 
