--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-white static-top border-bottom border-info">
 		<div class="container">
 			<a class="navbar-brand" href="#">
-				<img class="img-fluid" src="./assets/images/yenilogo.png" alt="" />
+				<img class="img-fluid" src="./assets/images/derneklogoufak.png" alt="" />
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,32 +53,43 @@
 	</nav>
 	<div class="hero ">
 		<div class="overlay d-flex flex-column justify-content-around justify-content-sm-start align-items-center ">
-			<img src="/assets/images/duimlogobüyükyuvarlak.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
+			<img src="/assets/images/derneklogoorta.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
 			<div class="h5   font-weight-bold text-center mb-5 pb-1 mb-sm-3 mb-md-4 mb-lg-5 mb-xl-5  text-white  ">
 				İstanbul
 				Üniversitesi Deniz Ulaştırma İşletme <br> Mühendisliği Mezunları Derneği</div>
-			<a role="button" href="about.html" class="btn-lg btn-info ">
+			<a role="button" id="tuzuk" class="btn-lg btn-info " href="assets/pdf/DUİMMED TÜZÜK.pdf"
+				download="DUIMTUZUK.PDF">
 
-				HAKKIMIZDA
+				DERNEK TÜZÜĞÜ
 			</a>
 		</div>
 		<div class="boxes d-sm-flex mb-sm-5  justify-content-center align-items-center">
-			<div class="box bg-primary">
-				HABERLER
+			<div class=" bg-primary">
+				<div class="box">
+					HABERLER </div>
 			</div>
-			<div class="box bg-warning">ETKİNLİKLER</div>
-			<div class="box bg-danger">SOSYAL</div>
+			<div class=" bg-warning">
+				<div class="box">
+					ETKİNLİKLER</div>
+			</div>
+
+			<div class="bg-danger">
+				<div class="box">
+					SOSYAL
+				</div>
+			</div>
 		</div>
-		<div class="container d-flex flex-column justify-content-center align-items-center  mt-sm-2 mb-sm-2 pt-sm-2">
+
+		<div
+			class="container message d-flex flex-column justify-content-center align-items-center  mt-sm-2 mb-sm-2 pt-sm-2">
 			<div class="h2 font-weight-bold text-center mb-5 mt-5">
 				BAŞKANIN MESAJI
 			</div>
 
-			<div class="h3 font-weight-light   text-center text-justify">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime alias
-				eum nostrum nemo impedit asperiores atque nisi. Rerum fugit doloremque
-				beatae laborum nulla! Animi tempore accusantium labore nostrum.
-				Corrupti, natus!
+			<div class="h3 font-weight-light   text-center text-justify">Duimder olarak yeni sitemizin test
+				yayınına
+				başladık. Siz değerli üyelerimizin de katkısıyla yeni dönemde sürpriz projelerle karşınıza
+				çıkacağız.Lütfen takipte kalın.
 			</div>
 			<!-- <img src="/assets/images/örnekimza 1.png" -->
 			<!-- class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" -->
@@ -89,7 +100,7 @@
 			</div>
 		</div>
 		<hr class="hr">
-		<div class="container news-container bg-white">
+		<div class="container d-none news-container bg-white">
 
 			<div class="d-sm-flex flex-row justify-content-center">
 
@@ -107,7 +118,8 @@
 									alt="Generic placeholder image">
 								<div class="media-body">
 									<h5 class="mt-0">Media heading</h5>
-									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante
+									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
+									ante
 									sollicitudin.
 								</div>
 							</div>
@@ -119,7 +131,8 @@
 									alt="Generic placeholder image">
 								<div class="media-body">
 									<h5 class="mt-0">Media heading</h5>
-									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante
+									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
+									ante
 									sollicitudin.
 								</div>
 							</div>
@@ -131,7 +144,8 @@
 									alt="Generic placeholder image">
 								<div class="media-body">
 									<h5 class="mt-0">Media heading</h5>
-									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante
+									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
+									ante
 									sollicitudin.
 								</div>
 							</div>
@@ -143,7 +157,8 @@
 									alt="Generic placeholder image">
 								<div class="media-body">
 									<h5 class="mt-0">Media heading</h5>
-									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante
+									Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
+									ante
 									sollicitudin.
 								</div>
 							</div>
@@ -170,11 +185,14 @@
 									CUMA
 								</div>
 								<div class="h1 text-warning">10</div>
-								<div class="h5 text-muted font-weight-bold activity-date-month pl-xs-2">OCAK</div>
+								<div class="h5 text-muted font-weight-bold activity-date-month pl-xs-2">OCAK
+								</div>
 							</div>
 							<div class="activity-detail">
-								<div class="p-1 text-capitalize activity-detail-name">YENİ MEZUNLAR TOPLANTISI</div>
-								<div class="  font-weight-light activity-detail-location">Duimder Merkez 20:30</div>
+								<div class="p-1 text-capitalize activity-detail-name">YENİ MEZUNLAR
+									TOPLANTISI</div>
+								<div class="  font-weight-light activity-detail-location">Duimder Merkez
+									20:30</div>
 							</div>
 						</div>
 						<div
@@ -336,6 +354,7 @@
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+
 	</script>
 </body>
 
