message gradient remove & screen width fix

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="hero ">
+	<div class="hero  ">
 		<div class="overlay d-flex flex-column justify-content-around justify-content-sm-start align-items-center ">
 			<img src="/assets/images/derneklogoorta.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
 			<div class="h5   font-weight-bold text-center mb-5 pb-1 mb-sm-3 mb-md-4 mb-lg-5 mb-xl-5  text-white  ">
@@ -99,7 +99,7 @@
 				YÖNETİM KURULU BAŞKANI
 			</div>
 		</div>
-		<hr class="hr">
+		<hr class="hr d-none">
 		<div class="container d-none news-container bg-white">
 
 			<div class="d-sm-flex flex-row justify-content-center">
@@ -232,7 +232,7 @@
 				</div>
 			</div>
 		</div>
-		<hr class="hr" />
+		<hr class="hr d-none" />
 		<footer class="mainfooter" role="contentinfo">
 			<div class="footer-middle">
 				<div class="container">
