Gallery js, pictures

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="/assets/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/lightbox.min.css">
+
 </head>
 </head>
 
@@ -232,6 +234,78 @@
 				</div>
 			</div>
 		</div>
+		<div class="hr" />
+		<div class="container mt-0 mt-sm-2 pt-0 pt-sm-2">
+			<div class="text-center  pb-3 mt-4 mt-sm-0 news-title">
+				<h2>GALERİ</h2>
+			</div>
+			<div class="row">
+
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0004.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0004.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0005.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0005.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0006.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0006.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0007.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0007.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0008.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0008.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0009.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0009.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0010.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0010.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0011.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img <a
+						href="assets/images/derneketkinlik/IMG-20191221-WA0012.jpg " data-lightbox="lightbox"
+						data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0012.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0013.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0013.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0014.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0014.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0015.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0015.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0016.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0016.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0017.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0017.jpg " class="img-fluid rounded"> </a>
+
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0019.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0019.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0020.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0020.jpg " class="img-fluid rounded"> </a>
+
+
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0023.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0023.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0024.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0024.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0025.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0025.jpg " class="img-fluid rounded"> </a>
+				<a href="assets/images/derneketkinlik/IMG-20191221-WA0026.jpg " data-lightbox="lightbox"
+					data-gallery="gallery" class="col-md-4"> <img
+						src="assets/images/derneketkinlik/IMG-20191221-WA0026.jpg " class="img-fluid rounded"> </a>
+
+			</div>
+		</div>
 		<hr class="hr d-none" />
 		<footer class="mainfooter" role="contentinfo">
 			<div class="footer-middle">
@@ -346,9 +420,10 @@
 	</div>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js ">
 	</script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 	</script>
@@ -356,6 +431,10 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 
 	</script>
+	<script src="assets/js/lightbox.min.js">
+	</script>
+
+
 </body>
 
 </html>
