--- a/index.html
+++ b/index.html
@@ -239,69 +239,69 @@
 			<div class="text-center  pb-3 mt-4 mt-sm-0 news-title">
 				<h2>GALERİ</h2>
 			</div>
-			<div class="row">
+			<div class="row photo-gallery ">
 
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0004.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0004.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0005.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0005.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0006.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0006.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0007.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0007.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0008.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0008.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0009.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0009.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0010.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0010.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0011.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img <a
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img <a
 						href="assets/images/derneketkinlik/IMG-20191221-WA0012.jpg " data-lightbox="lightbox"
-						data-gallery="gallery" class="col-md-4"> <img
+						data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0012.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0013.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0013.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0014.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0014.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0015.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0015.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0016.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0016.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0017.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0017.jpg " class="img-fluid rounded"> </a>
 
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0019.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0019.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0020.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0020.jpg " class="img-fluid rounded"> </a>
 
 
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0023.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0023.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0024.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0024.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0025.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0025.jpg " class="img-fluid rounded"> </a>
 				<a href="assets/images/derneketkinlik/IMG-20191221-WA0026.jpg " data-lightbox="lightbox"
-					data-gallery="gallery" class="col-md-4"> <img
+					data-gallery="gallery" class="col-sm-6 col-md-4 col-lg-3 item"> <img
 						src="assets/images/derneketkinlik/IMG-20191221-WA0026.jpg " class="img-fluid rounded"> </a>
 
 			</div>
