--- a/index.html
+++ b/index.html
@@ -52,7 +52,39 @@
 				</ul>
 			</div>
 		</div>
-	</nav>
+	</nav>   <!-- Modal -->
+    <div  class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content bg-dark">
+
+          <div class="modal-body">
+            <div class="d-flex  flex-column justify-content-center align-items-center">
+
+				<div class="text-white text-centered font-weight-bold h3">
+					ACI KAYBIMIZ
+				</div>
+				<img src="assets/images/cenaze.jpg" class="img-fluid"></img>
+				<div class="pt-2 text-white">
+					20.12.2019 tarihinde Hint okyanusunda seyir halinde , gemi kaptanı olarak görevi başındayken hain bir saldırı sonucu hayatını kaybeden İTÜ Denizcilik Fakültesi Güverte 1997 mezunu Kaptan Bora EKŞİ’yi kaybetmenin derin üzüntüsü içindeyiz.
+
+					İstanbu Üniversitesi Deniz Ulaştırma İşletme Mühendisleri Mezunlar Derneği olarak bu hain saldırıyı şiddetle kınıyor , yetkili tüm kurum ve kuruluşlardan gereğinin yapılmasını talep ediyoruz.
+
+					 Deniz şehidimiz Kaptan Bora EKŞİ’ye Allah'tan rahmet , başta ailesi ve sevenleri olmak üzere tüm camiamıza sabır ve başsağlığı diliyoruz.
+
+					Kaptan Bora EKŞİ’nin cenazesi , 25.12.2019 tarihinde Altunizade Marmara İlahiyat Fakültesi Camii’ndeki öğle namazının ardından Valide Sultan Mezarlığı’na defnedilecektir.
+				</div>
+			</div>
+			<div class="text-right text-white font-weight-bold">
+				İÜ DUİMDER Yönetim Kurulu
+			</div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">KAPAT</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
 	<div class="hero  ">
 		<div class="overlay d-flex flex-column justify-content-around justify-content-sm-start align-items-center ">
 			<img src="/assets/images/derneklogoorta.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
@@ -431,6 +463,12 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 
 	</script>
+	</script>
+	<script type="text/javascript">
+	$(window).on('load',(function(){
+   $('#myModal').modal('show');
+    }));
+ </script>
 	<script src="assets/js/lightbox.min.js">
 	</script>
 
