--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="text-white text-centered font-weight-bold h3">
 					ACI KAYBIMIZ
 				</div>
-				<img src="assets/images/cenaze.jpg" class="img-fluid"></img>
+				<img src="/assets/images/cenaze.jpg" class="img-fluid"></img>
 				<div class="pt-2 text-white">
 					20.12.2019 tarihinde Hint okyanusunda seyir halinde , gemi kaptanı olarak görevi başındayken hain bir saldırı sonucu hayatını kaybeden İTÜ Denizcilik Fakültesi Güverte 1997 mezunu Kaptan Bora EKŞİ’yi kaybetmenin derin üzüntüsü içindeyiz.
 
