--- a/zirve.html
+++ b/zirve.html
@@ -83,10 +83,10 @@
             <a href="assets/images/zirvefotoları/DSC0251.JPG " data-lightbox="lightbox" data-gallery="gallery"
                 class="col-sm-6 col-md-4 col-lg-3 item"> <img src="assets/images/zirvefotoları/DSC0251.JPG"
                     class="img-fluid rounded"> </a>
-            <a href="assets/images/zirvefotoları/_DSC0431.JPG" data-lightbox="lightbox" data-gallery="gallery"
+            <a href="assets/images/zirvefotoları/DSC0431.JPG" data-lightbox="lightbox" data-gallery="gallery"
                 class="col-sm-6 col-md-4 col-lg-3 item"> <img src="assets/images/zirvefotoları/DSC0431.JPG"
                     class="img-fluid rounded"> </a>
-            <a href="assets/images/zirvefotoları/_DSC0456.JPG" data-lightbox="lightbox" data-gallery="gallery"
+            <a href="assets/images/zirvefotoları/DSC0456.JPG" data-lightbox="lightbox" data-gallery="gallery"
                 class="col-sm-6 col-md-4 col-lg-3 item"> <img src="assets/images/zirvefotoları/DSC0456.JPG"
                     class="img-fluid rounded"></a>
             <a href="assets/images/zirvefotoları/DSC_0065.JPG" data-lightbox="lightbox" data-gallery="gallery"
