--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <div class=" news rounded mb-2">
                                 <div class=" p-1">
                                     <div class="img-same">
-                                    <img class=" pb-2" src="/assets/images/berrak.png" alt="Hakan Karaca">
+                                    <img class=" pb-2" src="/assets/images/berrak.png" alt="Burcu Berrak">
 </div>
                                     <div class="media-body font-weight-light text-dark">
 
