--- a/index.html
+++ b/index.html
@@ -135,10 +135,8 @@
             <!-- <img src="/assets/images/örnekimza 1.png" -->
             <!-- class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" -->
             <!-- alt="imza" /> -->
-            <div class="h3 text-centered mt-3 mb-3">HAKAN KARACA</div>
-            <div class="h5 text-centered font-weight-light">
-                YÖNETİM KURULU BAŞKANI
-            </div>
+            <div class="h3 text-centered mt-3 mb-3">YÖNETİM KURULU</div>
+            
         </div>
         <hr class="hr">
         <div class="container  news-container bg-white mb-1 pb-1">
