--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div
             class="container message d-flex flex-column justify-content-center align-items-center  mt-sm-2 mb-sm-2 pt-sm-2">
             <div class="h2 font-weight-bold text-center mb-5 mt-5">
-                BAŞKANIN MESAJI
+                YÖNETİM KURULU MESAJI
             </div>
 
             <div class="h3 font-weight-light   text-center text-justify">Duimder olarak yeni sitemizin test
@@ -135,7 +135,7 @@
             <!-- <img src="/assets/images/örnekimza 1.png" -->
             <!-- class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" -->
             <!-- alt="imza" /> -->
-            <div class="h3 text-centered mt-3 mb-3">YÖNETİM KURULU</div>
+           
             
         </div>
         <hr class="hr">
