--- a/index.html
+++ b/index.html
@@ -116,27 +116,29 @@
 
             <div class="bg-danger">
                 <div class="box">
-                    SOSYAL
+                   DİJİTAL
                 </div>
             </div>
         </div>
 
-        <div
+         <div
             class="container message d-flex flex-column justify-content-center align-items-center  mt-sm-2 mb-sm-2 pt-sm-2">
-            <div class="h2 font-weight-bold text-center mb-5 mt-5">
-                YÖNETİM KURULU MESAJI
+            <a href="https://www.duimder.org/register"
+                class=" h3  p-5 text-lowercase rounded-circle border border-danger  bg-info text-light text-center ">
+                DUİMDER<br>
+                DİJİTAL'e<br>
+                ÜYE OL!
+            </a>
+            <div class="h3 font-weight-bold text-center mb-5 mt-5">
+                BAŞKANIN MESAJI
             </div>
 
-            <div class="h3 font-weight-light   text-center text-justify">Duimder olarak yeni sitemizin test
+            <div class="h3 font-weight-light   text-center text-justify">Duimder Dijital açıldı! . Dernek üyelerimiz
+                için
+                oluşturulan sosyal ağımızın test yayınına başladık lütfen üye olun
                 yayınına
-                başladık. Siz değerli üyelerimizin de katkısıyla yeni dönemde sürpriz projelerle karşınıza
-                çıkacağız.Lütfen takipte kalın.
+                başladık.
             </div>
-            <!-- <img src="/assets/images/örnekimza 1.png" -->
-            <!-- class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" -->
-            <!-- alt="imza" /> -->
-           
-            
         </div>
         <hr class="hr">
         <div class="container  news-container bg-white mb-1 pb-1">
