--- a/index.html
+++ b/index.html
@@ -135,9 +135,8 @@
 
             <div class="h3 font-weight-light   text-center text-justify">Duimder Dijital açıldı! . Dernek üyelerimiz
                 için
-                oluşturulan sosyal ağımızın test yayınına başladık lütfen üye olun
-                yayınına
-                başladık.
+                oluşturulan sosyal ağımızın test yayınına başladık lütfen üye olunuz.
+                
             </div>
         </div>
         <hr class="hr">
