--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 ÜYE OL!
             </a>
             <div class="h3 font-weight-bold text-center mb-5 mt-5">
-                BAŞKANIN MESAJI
+               YÖNETİM KURULU MESAJI
             </div>
 
             <div class="h3 font-weight-light   text-center text-justify">Duimder Dijital açıldı! . Dernek üyelerimiz
