Update rename kvk to kvkk

--- a/kvkk.html
+++ b/kvkk.html
@@ -183,7 +183,7 @@
         <div style="position:absolute;left:70.82px;top:297.61px" class="cls_004"><span class="cls_004">bilgilere</span>
         </div>
         <div style="position:absolute;left:120.34px;top:297.61px" class="cls_004"><span class="cls_004">[</span><A
-                HREF="http://www.duimder.com/kvk/">www.duimder.com/KVK</A>] adresinde yer alan DUİMDER<span
+                HREF="http://www.duimder.com/kvkk/">www.duimder.com/KVKK</A>] adresinde yer alan DUİMDER<span
                 class="cls_003"> Kişisel Verilerin</span></div>
         <div style="position:absolute;left:70.82px;top:318.37px" class="cls_003"><span class="cls_003">Korunması ve
                 İşlenmesi Politikası’ndan ulaşabilirsiniz.</span></div>
