--- a/index.html
+++ b/index.html
@@ -130,14 +130,19 @@
                 ÜYE OL!
             </a>
             <div class="h3 font-weight-bold text-center mb-5 mt-5">
-                YÖNETİM KURULU MESAJI
+                KABOTAJ BAYRAMI VE BÖLÜMÜMÜZ 25. YILI KUTLAMA VİDEOLARI
+            </div>
+            <div class="d-sm-flex flex-row  justify-content-between">
+                <video height="350" width="350" controls>
+                    <source src="./assets/video/duim_der_105619649_276638217107713_8888035054052505607_n.mp4"
+                        type="video/mp4">
+                    <source src="mov_bbb.ogg" type="video/ogg">
+                </video>
+                <video height="350" width="350" controls>
+                    <source src="./assets/video/Video.mov" type="video/mp4">
+                </video>
             </div>
 
-            <div class="h3 font-weight-light   text-center text-justify">Duimder Dijital açıldı! . Dernek üyelerimiz
-                için
-                oluşturulan sosyal ağımızın test yayınına başladık lütfen üye olunuz.
-
-            </div>
         </div>
         <hr class="hr">
         <div class="container  news-container bg-white mb-1 pb-1">
