--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 
                 DERNEK TÜZÜĞÜ
             </a>
+            <a role="button" id="tuzuk" class="btn-lg btn-danger mt-1 " href="assets/pdf/DuimderÜyelikFormu .pdf"
+                download="DüimderÜyelikFormu .PDF">
+
+                ÜYELİK FORMU
+            </a>
         </div>
         <div class="boxes d-sm-flex mb-sm-5  justify-content-center align-items-center">
             <div class=" bg-primary">
