--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
                         <div class="text-white text-centered font-weight-bold h3">
                             DUİMDER STAJ BAŞVURULARI
                         </div>
-                        <img src="/assets/images/staj.jpg" class="img-fluid"></img>
+                        <!-- <img src="/assets/images/staj.jpg" class="img-fluid"></img> -->
+                        <!-- <div class="d-sm-flex flex-row  justify-content-between">
+                            <video class="flex-grow-1" controls>
+                                <source
+                                    src="./assets/video/duim_der_105619649_276638217107713_8888035054052505607_n.mp4"
+                                    type="video/mp4">
+                                <source src="mov_bbb.ogg" type="video/ogg">
+                            </video>
+
+                        </div> -->
+                        <div class="embed-responsive embed-responsive-1by1">
+                            <iframe class="embed-responsive-item" src="./assets/video/staj.mp4"
+                                allowfullscreen></iframe>
+                        </div>
                         <div class="pt-2 text-white">
                             Staj yapmak isteyen öğrencilerimiz linkteki formu doldurarak, staj başvurularını
                             gerçekleştirebilirler.
